fixed some routes and adjusted Swagger
